feat: add getTimeSlotByCour
